[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/Templates/Prefab_PlayerCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tilesets/Tileset_TestLevel.tres" type="TileSet" id=2]
[ext_resource path="res://Prefabs/UI/Prefab_HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/World.gd" type="Script" id=6]
[ext_resource path="res://Prefabs/Prefab_MainCamera.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=2]
resource_name = "Sequence_Die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:tint")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.752941, 0.466667, 0.466667, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WorldObjects/Player/Main Camera:zoom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Sequence_Start"
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/ScreenFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/Elements:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_stage"
} ]
}

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="Terrain" type="Node2D" parent="."]
z_as_relative = false

[node name="TileMap" type="TileMap" parent="Terrain"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="WorldObjects" type="YSort" parent="."]

[node name="Player" parent="WorldObjects" instance=ExtResource( 1 )]

[node name="Main Camera" parent="WorldObjects/Player" instance=ExtResource( 7 )]

[node name="MapEvents" type="YSort" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0

[node name="HUD" parent="." instance=ExtResource( 4 )]
follow_viewport_enable = false

[node name="SequenceAnimation" type="AnimationPlayer" parent="."]
anims/Sequence_Die = SubResource( 2 )
anims/Sequence_Start = SubResource( 1 )

[editable path="HUD"]
